# scraping-assignment

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: DESIGN.md  INVESTIGATION.md
src/: browser_base_factory.py  entry.py
src/application/: scraping_pipeline.py
src/models/: base_scraper.py
src/ports/: __init__.py  los_angeles_case_numbers.py  los_angeles_scraper.py
tests/: test_los_angeles_scraper.py
