[project]
name = "scraping-assignment"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "browserbase>=1.13.0",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
scraper = "src.entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4",
    "ruff>=0.15.20",
]
